--- a/style.css
+++ b/style.css
@@ -1,120 +1,70 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
+
 * {
-    font-family: 'Titillium Web', sans-serif;
-    font-weight: 400;
-    color: white;
-}
-
-head {
-    
-}
-
-body {
-    /*background-image: linear-gradient(45deg, #141414, #262626);*/
-    background-color: #141414;
-    background-image: url(bg.PNG);
-    padding-left: 30pt;
+    font-family: 'Armino', sans-serif;
 }
 
 h1 {
-    font-weight: 900;
-    float: left;
-    text-align: left;
-    font-size: 50pt;
-    margin: 19pt;
-    margin-bottom: 0pt;
-    margin-left: 0pt;
-    background: -webkit-linear-gradient(45deg, #05659B, #01E196);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #ffffff;
+    font-family: 'Armino', sans-serif;
 }
 
-h2 {
+body {
+    background-color: #0f0f0f;
+    height: 100%;
+}
+
+.content {
+    position: absolute;
+    top:  50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.navigation {
+    color: white;
     font-size: 15pt;
-    font-weight: 900;
-    color: #ff7600;
-    text-align: left;
-    font-size: 30pt;
-    margin: 0pt;
-    background: -webkit-linear-gradient(45deg, #05659B, #01E196);
-    -webkit-background-clip: text;
-    -webkit-background-size: 20%;
-    -webkit-text-fill-color: transparent;
+    text-align: center;
 }
 
-p {
-    margin: 0;
-    font-weight: 100;
-    font-size: 13pt;
+a {
+    transition: 0.2s;
+    color: #3185d9;
+    text-decoration: none;
+}
+
+a:hover {
+    color: white;
+}
+
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
+.logo {
+    float: left;
+    width: 60px;
+    height: 60px;
+}
+
+.jardev {
+    padding-top: 16px;
 }
 
 html {
     height: 100%;
 }
 
-ul { 
-    float: left;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+.title {
+    text-align: center;
 }
 
-li {
-    padding: 5pt;
-    padding-top: 41.5pt;
-    float: left;
-}
-
-li a {
-    display: block;
+.content p {
     color: white;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
 }
 
-.navBtn {
-    font-size: 15pt;
-    transition: 1s;
-    padding-top: 7.7pt;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    color: #ff7600;
-    background: -webkit-linear-gradient(45deg, #05659B, #01E196);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 
-.navBtn:hover {
-    color: white;
-    background: -webkit-linear-gradient(45deg, #05659B, #01E196);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: #ffffff;
-    color: white;
-}
-
-nav {
-    padding: 0pt;
-    margin: 0pt;
-}
-
-.header {
-    overflow: hidden;
-}
-
-a {
-    font-weight: 900pt;
-    color: #ff7600;
-    text-decoration: none;
-    background: -webkit-linear-gradient(45deg, #05659B, #01E196);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;  
-}
-
-a:hover {
-    -webkit-text-fill-color: #ffffff;
-}
-
-.content {
-    margin-right: 500pt;
-}
